--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm run server --prefix ../Student_Portal\" \"next dev --turbo\"",
+    "dev": "concurrently \"npm run server\" \"next dev --turbo\"",
+    "server": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.10.0",
     "concurrently": "^8.2.2",
+    "multer": "^1.4.5-lts.1",
     "framer-motion": "^11.0.0",
     "i18next": "^25.3.1",
     "next": "15.3.4",
@@ -28,6 +30,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "json-server": "^0.17.4",
+    "json-server-auth": "^2.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4",
