--- a/deploy/systemd/campus-hub.service
+++ b/deploy/systemd/campus-hub.service
@@ -5,14 +5,13 @@ After=network.target
 [Service]
 Type=simple
 Environment=NODE_ENV=production
+Environment=PORT=3000
 WorkingDirectory=/var/www/Campus_Hub
 ExecStart=/usr/bin/npm start
 Restart=always
 RestartSec=10
-User=www-data
-Group=www-data
+User=campus
+Group=campus
 
 [Install]
 WantedBy=multi-user.target
-
-
